--- a/DOM-CHECPOINT/index.html
+++ b/DOM-CHECPOINT/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Panda|cart</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel="stylesheet" type="text/css" href="/font-awesome-4.7.0/css/font-awesome.css">
-    <link rel='stylesheet' type='text/css' media='screen' href='/style/style.css'>
+    <link rel="stylesheet" type="text/css" href="/DOM-CHECPOINT/font-awesome-4.7.0/css/font-awesome.css">
+    <link rel='stylesheet' type='text/css' media='screen' href='/DOM-CHECPOINT/style/style.css'>
 </head>
 <body>
     <header>
