done with css and using dom to get html element to store them in variables

--- a/DOM-CHECPOINT/index.html
+++ b/DOM-CHECPOINT/index.html
@@ -12,22 +12,19 @@
     <header>
         <div class="container">
             <h1>
-                Your Shopping cart
+                Your Shopping Cart
             </h1>
             <div id="shoppingBag">
-                <img src="/img/shopping-bag-svgrepo-com.svg" alt="">
+                <img src="./img/shopping-bag-svgrepo-com.svg" alt="">
                 <span id="quantity">0</span>
             </div>
         </div>
     </header>
-    <main>
-        <!-- food menu section -->
-    </main>
     <aside>
         <div class="container2">
             <!-- shopping cart -->
         <div class="list"></div>
-        <div class="card no">
+        <div class="card active">
             <h1>card</h1>
             <ul class="listCard"></ul>
             <div class="checkOut">
