created two fuctions to toggle the list of the shopping cart

--- a/DOM-CHECPOINT/index.html
+++ b/DOM-CHECPOINT/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href="/DOM-CHECPOINT/font-awesome-4.7.0/css/font-awesome.css">
     <link rel='stylesheet' type='text/css' media='screen' href='/DOM-CHECPOINT/style/style.css'>
 </head>
-<body>
+<body >
     <header>
         <div class="container">
             <h1>
@@ -24,7 +24,7 @@
         <div class="container2">
             <!-- shopping cart -->
         <div class="list"></div>
-        <div class="card active">
+        <div class="card">
             <h1>card</h1>
             <ul class="listCard"></ul>
             <div class="checkOut">
