working on the add to cart function

--- a/DOM-CHECPOINT/index.html
+++ b/DOM-CHECPOINT/index.html
@@ -21,7 +21,7 @@
         </div>
     </header>
     <aside>
-        <div class="container2">
+        <div class="container">
             <!-- shopping cart -->
         <div class="list"></div>
         <div class="card">
